  functions, obsoleted by logging [éric]
- #12659: Add tests for tests.support [francisco]
- #13901: Prevent test failure on OS X for Python built in shared mode [ned]
- #11805: Add multiple value syntax for package_data in setup.cfg [éric]
- #13712: Don't map package_data to extra_files when converting a setup.py
  script with pysetup create [éric]


1.0a3 - 2010-10-08
------------------

- Provided a Tox configuration for cross-Python testing [holger]
- Fixed the installation when using easy_install and Pip by switching
  setup.py to distutils1 [holger/tarek]
- Added missing c/h files in the MANIFEST so they are always present
  no matter which Python version was used to build it [holger/tarek]
- Added pysetup, the new setup runner that uses only setup.cfg
- Renamed mkpkg to mkcfg [tarek]
- Renamed install_tools to install [alexis]

1.0a2 - 2010-09-10
------------------

- Add a converter for distutils/setuptools-based setup scripts [tarek]
- Factor out MANIFEST[.in] support into disutils2.manifest [tarek]
- Implement pkgutil APIs described in PEP 376 [josip]
- Add PEP 376 .dist-info support in Distribute [josip]
- Add distutils2.depgraph, a dependency graph builder [josip]
- Add a mock server to test network-using code [alexis, konrad]
- Add distutils2.index, a comprehensive subpackage to query PyPI [alexis]
- Add 2to3 support to the build command [zubin]
- Enhance the check command (sanity tests) [konrad]
- Make sdist include source files used by other commands [jeremy]
- Change install_egg_info to install_distinfo (PEP 376) [josip]
- Import the upload_docs command from distribute [konrad]
- Add a test command [konrad]
- Add post and pre-hooks for build and install [konrad]
- Remove PyPIRCCommand, move its helper code into util [tarek]
- Remove Mac OS 9 support [éric]
- Start adding docstrings to interface methods [jeremy]
- Copy documentation from the stdlib [ali, éric]
- Lots of bug fixes, cleanups, tests [everyone]


1.0a1 - 2010-05-06
------------------
