@@ -164,6 +164,8 @@ CONTRIBUTORS.txt for full names.  Bug numbers refer to http://bugs.python.org/.
 - #11805: Add multiple value syntax for package_data in setup.cfg [éric]
 - #13712: Don't map package_data to extra_files when converting a setup.py
   script with pysetup create [éric]
+- #1326113: build_ext now correctly parses multiple values given to the
+  --libraries option [éric]
 
 
 1.0a3 - 2010-10-08
